2017-11-29  Mark Wielaard  <mark@klomp.org>

	* readelf.c (argp_options): Add "section-groups", 'g'.

2017-11-29  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_loc_section): Print CU base and unresolved
	addresses. Adjust formatting.

2017-11-29  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_ranges_section): Print CU base and unresolved
	addresses. Adjust formatting.

2017-11-29  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Set valuestr to resolved file name
	for DW_AT_decl_file and DW_AT_call_file.

2017-11-29  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_units): Print abbrev code after DIE tag.

2017-11-29  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_ops): Use only2 space for index. re-indent +5
	for DW_OP_GNU_entry_value.

2017-11-21  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Print attribute name and form in error
	message. If only the value cannot be retrieved/resolved don't abort.

2017-10-03  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Print DIE offset in error messages.

2017-11-03  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_ops): Handle DW_OP_GNU_variable_value. Print
	referenced DIE as offset.

2017-09-10  Mark Wielaard  <mark@klomp.org>

	* ar.c (do_oper_delete): Remove DEBUG conditional check.
	(no0print): Return bool. Check snprintf return value.
	(do_oper_insert): Initialize elf. Remove DEBUG conditional check.
	Check no0print calls succeed. Explicitly elf_end found elfs.
	(do_oper_extract): Make sure we don't create an empty variable
	length array.

2017-09-01  Mark Wielaard  <mark@klomp.org>

	* stack.c (main): Replace \v in doc string with \n\n.
	* unstrip.c (main): Likewise.

2017-05-04  Ulf Hermann  <ulf.hermann@qt.io>

	* stack.c: Print pid_t using %lld.

2017-08-18  Ulf Hermann  <ulf.hermann@qt.io>

	* readelf.c: Hardcode the signal numbers for non-linux systems.

2017-07-26  Mark Wielaard  <mark@klomp.org>
